# diffexpr

./: .coverage  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  README.md  build.sh  environment.yml  pyproject.toml  requirements.txt  setup.R  setup.py
.github/: pull_request_template.md
.github/workflows/: CI.yml  docker.yml
diffexp/: py_deseq.py  py_pathway.py
diffexpr/: py_deseq.py  py_dexseq.py  py_pathway.py  requirements.txt
example/: deseq_example.ipynb
example/.ipynb_checkpoints/: deseq_example-checkpoint.ipynb
test/: deseq.R  test_deseq.py  test_pathways.py
test/data/: ercc.tsv
test/data/quant2/: abundance.h5
